fix footer alignment

--- a/app/components/Footer/Footer.module.css
+++ b/app/components/Footer/Footer.module.css
@@ -9,6 +9,7 @@
     display: flex;
     gap: 1rem;
     list-style-type: none;
+    margin: auto;
 }
 
 .footerLinks a {
